# INF721-DeepLearning-Projeto-Final

./: .gitignore  .gitmodules  Makefile  pyproject.toml  readme.md  requirements.txt
MS-SNSD/: noisyspeech_synthesizer.cfg  noisyspeech_synthesizer.py
workspace/: inference.py  model.py  train.py  utils.py
workspace/dataset/: create_dataset_metadata.py  dataset.py  prepare.py  split_dataset.py
